--- a/src/components/CatCard/CatCard.module.css
+++ b/src/components/CatCard/CatCard.module.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-  height: 400px;
+  height: 300px;
 
   background-size: cover;
   background-repeat: no-repeat;
@@ -25,9 +25,21 @@
   transition: all 0.3s ease-in-out;
 }
 
+@media screen and (min-width: 375px) {
+  .header {
+    height: 400px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .header {
     height: 300px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .header {
+    height: 350px;
   }
 }
 
