--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,12 +4,12 @@
 
 @media screen and (min-width: 768px) {
   .dialog {
-    width: 768px;
+    width: calc(768px + 34px * 2);
   }
 }
 
 @media screen and (min-width: 1440px) {
   .dialog {
-    width: 1024px;
+    width: calc(1024px + 34px * 2);
   }
 }
