--- a/src/components/ImageUploader/ImageUploader.module.css
+++ b/src/components/ImageUploader/ImageUploader.module.css
@@ -1,3 +1,71 @@
 .root {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 
+.root-overlay {
+  position: absolute;
+  z-index: -1;
+
+  inset: 0;
+
+  width: 100vw;
+  height: 100vh;
+
+  filter: blur(5px);
+  opacity: 0.5;
+
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.image-preview {
+  z-index: 2;
+
+  width: 300px;
+  height: 300px;
+  margin: auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+  border-radius: 6px;
+
+  @media screen and (min-width: 576px) {
+    width: 350px;
+    height: 350px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 400px;
+    height: 400px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 500px;
+    height: 500px;
+  }
+}
+
+.upload-button {
+  position: relative;
+
+  cursor: pointer;
+}
+
+.upload-input {
+  position: absolute;
+  inset: 0;
+  opacity: 0;
+
+  text-indent: -9999px;
+  font-size: 0px;
+  line-height: 0;
+
+  cursor: pointer;
+
+  background: darkblue;
+}
