--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -35,3 +35,26 @@
 
   border-radius: 6px;
 }
+
+.toggles {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 20px;
+
+  @media screen and (min-width: 768px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  @media screen and (min-width: 1440px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  & > div {
+    display: flex;
+    align-items: stretch;
+
+    & > div {
+      flex-grow: 1;
+    }
+  }
+}
