--- a/src/pages/Selected/Selected.module.css
+++ b/src/pages/Selected/Selected.module.css
@@ -1,3 +1,26 @@
 .root {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  align-content: flex-start;
 
+  gap: 25px;
+
+  overflow: auto;
+
+  padding-bottom: 70px;
+  padding-top: 5px;
+}
+
+@media screen and (min-width: 768px) {
+  .root {
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+
+    padding-top: 0;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .root {
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+  }
 }
